kubernetes/apps/network/internal/remote-services/apps.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-apps
  namespace: network
spec:
  # type: ExternalName
  ports:
    - name: http
      port: 81
      targetPort: 81
  # externalName: ${SETTINGS_NAS_IP}
  selector: {}
  externalIPs:
    - ${SETTINGS_NAS_IP}


# ---
# # yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: apps-ingress
#   namespace: network
#   annotations:
#     external-dns.alpha.kubernetes.io/hostname: "apps.${SECRET_DOMAIN}"
#     kubernetes.io/ingress.class: traefik
#     gethomepage.dev/app: "apps"
#     gethomepage.dev/enabled: "true"
#     gethomepage.dev/name: "apps"
#     gethomepage.dev/description: "Personal Apps"
#     gethomepage.dev/href: "https://apps.${SECRET_DOMAIN}"
#     gethomepage.dev/group: "Web"
#     gethomepage.dev/icon: "organizr.png"
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`apps.${SECRET_DOMAIN}`)
#       kind: Rule
#       priority: 1
#       services:
#         - name: apps
#           port: 81
#       middlewares:
#         - name: internal-auth-middlewares
#   tls:
#     secretName: "${SECRET_DOMAIN/./-}-production-tls"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-apps-ingress
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    gethomepage.dev/app: "apps"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "apps"
    gethomepage.dev/description: "Personal Apps"
    gethomepage.dev/href: "https://apps.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Web"
    gethomepage.dev/icon: "organizr.png"
spec:
  ingressClassName: internal
  rules:
    - host: "apps.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-apps
              port:
                number: 81
  tls:
    - hosts:
        - "apps.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
