kubernetes/apps/network/internal/remote-services/chat2.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-chat2
  namespace: network
spec:
  ports:
    - port: 3080
      protocol: TCP
      targetPort: 3080
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-chat2
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-chat2
addressType: IPv4
ports:
  - port: 3080
endpoints:
  - addresses:
    - ${SETTINGS_NAS_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-chat2
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    # authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "chat2"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "chat2"
    gethomepage.dev/description: "OpenAI Chat"
    gethomepage.dev/href: "https://chat2.${SECRET_DOMAIN}"
    gethomepage.dev/group: "AI"
    gethomepage.dev/icon: "openai.png"
    gethomepage.dev/siteMonitor: http://${SETTINGS_NAS_IP}:3080
spec:
  ingressClassName: internal
  rules:
    - host: "chat2.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-chat2
              port:
                number: 3080
  tls:
    - hosts:
        - "chat2.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
