kubernetes/apps/network/internal/remote-services/frigate.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-frigate
  namespace: network
spec:
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-frigate
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-frigate
addressType: IPv4
ports:
  - port: 5000
endpoints:
  - addresses:
    - ${SETTINGS_NAS_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-frigate
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    authentik.home.arpa/enabled: "true"
    gethomepage.dev/app: "frigate"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "frigate"
    gethomepage.dev/description: "Frigate NVR"
    gethomepage.dev/href: "https://frigate.${SECRET_DOMAIN}"
    gethomepage.dev/group: "NVR"
    gethomepage.dev/icon: "frigate.png"
    gethomepage.dev/siteMonitor: http://${SETTINGS_NAS_IP}:5000
spec:
  ingressClassName: internal
  rules:
    - host: "frigate.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-frigate
              port:
                number: 5000
  tls:
    - hosts:
        - "frigate.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
