kubernetes/apps/network/internal/remote-services/kvm1.yaml
# SETTINGS_KVM1_IP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-kvm1
  namespace: network
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-kvm1
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-kvm1
addressType: IPv4
ports:
  - port: 443
endpoints:
  - addresses:
    - ${SETTINGS_KVM1_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-kvm1
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    # authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "kvm1"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "kvm1"
    gethomepage.dev/description: "iDRAC Management Interface"
    gethomepage.dev/href: "https://kvm1.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "idrac.png"
    gethomepage.dev/siteMonitor: https://${SETTINGS_KVM1_IP}:443
    nginx.ingress.kubernetes.io/secure-backends: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-verify: "false"  # Disable SSL verification
spec:
  ingressClassName: internal
  rules:
    - host: "kvm1.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-kvm1
              port:
                number: 443
  tls:
    - hosts:
        - "kvm1.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
