kubernetes/apps/network/internal/remote-services/lidarr.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-lidarr
  namespace: network
spec:
  ports:
    - port: 8686
      protocol: TCP
      targetPort: 8686
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-lidarr
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-lidarr
addressType: IPv4
ports:
  - port: 8686
endpoints:
  - addresses:
    - ${SETTINGS_NAS_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-lidarr
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "lidarr"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "lidarr"
    gethomepage.dev/description: "Music Manager"
    gethomepage.dev/href: "https://apps.${SECRET_DOMAIN}/lidarr"
    gethomepage.dev/group: "Media Organization"
    gethomepage.dev/icon: "lidarr.png"
    # gethomepage.dev/widget.type: "lidarr"
    # gethomepage.dev/widget.url: "http://apps.${SECRET_DOMAIN}/lidarr"
    # gethomepage.dev/widget.key: "${HOMEPAGE_VAR_LIDARR_KEY}"
    gethomepage.dev/siteMonitor: http://${SETTINGS_NAS_IP}:8686
spec:
  ingressClassName: internal
  rules:
    - host: "apps.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /lidarr
          pathType: Prefix
          backend:
            service:
              name: remote-internal-lidarr
              port:
                number: 8686
  tls:
    - hosts:
        - "apps.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
