kubernetes/apps/network/internal/remote-services/overseerr.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-overseerr
  namespace: network
spec:
  ports:
    - port: 5055
      protocol: TCP
      targetPort: 5055
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-overseerr
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-overseerr
addressType: IPv4
ports:
  - port: 5055
endpoints:
  - addresses:
    - ${SETTINGS_NAS_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-overseerr
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    # authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "overseerr"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "overseerr"
    gethomepage.dev/description: "Find Movies and TV Shows"
    gethomepage.dev/href: "https://find.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "overseerr.png"
    # gethomepage.dev/widget.type: "overseerr"
    # gethomepage.dev/widget.url: "http://find.${SECRET_DOMAIN}"
    # gethomepage.dev/widget.key: "${HOMEPAGE_VAR_OVERSEERR_KEY}"
    gethomepage.dev/siteMonitor: http://${SETTINGS_NAS_IP}:5055
spec:
  ingressClassName: internal
  rules:
    - host: "find.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-overseerr
              port:
                number: 5055
  tls:
    - hosts:
        - "find.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
