kubernetes/apps/network/internal/remote-services/photoprism.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-photoprism
  namespace: network
spec:
  ports:
    - port: 2342
      protocol: TCP
      targetPort: 2342
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-photoprism
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-photoprism
addressType: IPv4
ports:
  - port: 2342
endpoints:
  - addresses:
    - ${SETTINGS_NAS_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-photoprism
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    # authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "photoprism"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "photoprism"
    gethomepage.dev/description: "PhotoPrism - AI-Powered Photo Management"
    gethomepage.dev/href: "https://photoprism.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "photoprism.png"
    # gethomepage.dev/widget.type: "photoprism"
    # gethomepage.dev/widget.url: "http://photoprism.${SECRET_DOMAIN}"
    # gethomepage.dev/widget.username: "${HOMEPAGE_VAR_PHOTOPRISM_USERNAME}"
    # gethomepage.dev/widget.password: "${HOMEPAGE_VAR_PHOTOPRISM_PASSWORD}"
    gethomepage.dev/siteMonitor: http://${SETTINGS_NAS_IP}:2342
spec:
  ingressClassName: internal
  rules:
    - host: "photoprism.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-photoprism
              port:
                number: 2342
  tls:
    - hosts:
        - "photoprism.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
