kubernetes/apps/network/internal/remote-services/proxmox1.yaml
# SETTINGS_PVE1_IP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-proxmox1
  namespace: network
spec:
  ports:
    - port: 8006
      protocol: TCP
      targetPort: 8006
      name: https
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-proxmox1
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-proxmox1
addressType: IPv4
ports:
  - port: 8006
endpoints:
  - addresses:
    - ${SETTINGS_PVE1_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-proxmox1
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    # authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "proxmox1"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "proxmox1"
    gethomepage.dev/description: "Proxmox Cluster"
    gethomepage.dev/href: "https://pve1.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "proxmox.png"
    # gethomepage.dev/widget.type: "proxmox"
    # gethomepage.dev/widget.url: "http://pve1.${SECRET_DOMAIN}"
    # gethomepage.dev/widget.username: "${HOMEPAGE_VAR_PVE1_USER}"
    # gethomepage.dev/widget.password: "${HOMEPAGE_VAR_PVE1_PASS}"
    gethomepage.dev/siteMonitor: https://${SETTINGS_PVE1_IP}:8006
    nginx.ingress.kubernetes.io/secure-backends: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-verify: "false"
spec:
  ingressClassName: internal
  rules:
    - host: "pve1.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-proxmox1
              port:
                number: 8006
  tls:
    - hosts:
        - "pve1.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
