kubernetes/apps/network/internal/remote-services/unifi.yaml
# SETTINGS_UNIFI_IP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-unifi
  namespace: network
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-unifi
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-unifi
addressType: IPv4
ports:
  - port: 80
endpoints:
  - addresses:
    - ${SETTINGS_NAS_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-unifi
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    # authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "unifi"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "unifi"
    gethomepage.dev/description: "UniFi Network Controller"
    gethomepage.dev/href: "https://unifi.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "unifi.png"
    # gethomepage.dev/widget.type: "unifi"
    # gethomepage.dev/widget.url: "http://unifi.${SECRET_DOMAIN}"
    # gethomepage.dev/widget.username: "${HOMEPAGE_VAR_UNIFI_USER}"
    # gethomepage.dev/widget.password: "${HOMEPAGE_VAR_UNIFI_PASS}"
    # gethomepage.dev/siteMonitor: http://${SETTINGS_NAS_IP}:80
spec:
  ingressClassName: internal
  rules:
    - host: "unifi.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-unifi
              port:
                number: 80
  tls:
    - hosts:
        - "unifi.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
