kubernetes/apps/network/internal/remote-services/unraid.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-unraid
  namespace: network
spec:
  ports:
    - port: 8443
      protocol: TCP
      targetPort: 8443
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-unraid
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-unraid
addressType: IPv4
ports:
  - port: 8443
endpoints:
  - addresses:
    - ${SETTINGS_NAS_IP}
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-unraid
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    # authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "unraid"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "unraid"
    gethomepage.dev/description: "Unraid Management Interface"
    gethomepage.dev/href: "https://unraid.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Storage"
    gethomepage.dev/icon: "unraid.png"
    gethomepage.dev/siteMonitor: http://${SETTINGS_NAS_IP}:8443
spec:
  ingressClassName: internal
  rules:
    - host: "unraid.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-unraid
              port:
                number: 8443
  tls:
    - hosts:
        - "unraid.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
